--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -202,6 +202,9 @@
                         <button id="display_off" class="btn btn-lg btn-outline-danger">OFF</button>
                     </div>
                 </div>
+                <div class="row mt-3">
+                    <a id="explore-link" class="btn btn-lg btn-info mx-auto" href="/explore">Explore</a>
+                </div>
 
             </div>
         </div>
