--- a/Arena/templates/index.html
+++ b/Arena/templates/index.html
@@ -91,6 +91,12 @@
                         </select>
                     </div>
                 </div>
+                <div class="form-group row pr-3" id="isAntiClockWiseDiv" style="display: none;">
+                    <label for="isAntiClockWise" class="col col-form-label">Anticlockwise Circle</label>
+                    <div class="col-sm-5">
+                        <input id="isAntiClockWise" type="checkbox" class="form-control-sm">
+                    </div>
+                </div>
                 <div class="form-group row pr-3">
                     <label for="bugSpeed" class="col col-form-label">Bug Speed:</label>
                     <div class="col-sm-5">
@@ -257,6 +263,14 @@
         $rewardBugDiv.show()
       }
     })
+    $("#movementTypeSelect").change(function () {
+      let isAntiClockWiseDiv = $("#isAntiClockWiseDiv")
+      if ($("#movementTypeSelect").val() === 'circle') {
+        isAntiClockWiseDiv.show()
+      } else {
+        isAntiClockWiseDiv.hide()
+      }
+    })
     $.get('/get_experiment', function (data) {
       $("#currentExperimentName").text(data)
     })
@@ -299,7 +313,8 @@
         reward_bugs: rewardBugs ? rewardBugs.join(',') : bugTypes,
         bug_speed: Number($("#bugSpeed").val()),
         movement_type: $("#movementTypeSelect").val(),
-        time_between_bugs: Number($("#timeBetweenBugs").val())
+        time_between_bugs: Number($("#timeBetweenBugs").val()),
+        is_anticlockwise: $("#isAntiClockWise").is(":checked")
       }
       $.ajax({
         url: "/start_experiment",
@@ -370,6 +385,7 @@
           rewardBugs: $("#rewardBugSelect").val() ? $("#rewardBugSelect").val() : $("#bugTypeSelect").val(),
           movementType: $("#movementTypeSelect").val(),
           timeBetweenBugs: Number($("#timeBetweenBugs").val()),
+          isAntiClockWise: $("#isAntiClockWise").is(":checked")
         }),
         contentType: "application/json",
         complete: function (res) {
