explore as service

--- a/Arena/templates/explore.html
+++ b/Arena/templates/explore.html
@@ -90,6 +90,9 @@
         },
         success: function (data) {
           $("#results-div").html(data)
+        },
+        error: function (data) {
+          $("#results-div").html(data.responseText)
         }
       })
   })
